osx compile fix
Former-commit-id: cb2975008657c835bac68ca8aae5d112178c0103

--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine.xcscheme
@@ -21,11 +21,11 @@
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BF151F7523845F2E00A70EBF"
@@ -60,9 +60,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF5EAFB4237F0C100077BCF5"
-            BuildableName = "PopEngine.framework"
-            BlueprintName = "PopEngine"
+            BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
+            BuildableName = "PopEngineUnitTestApp.app"
+            BlueprintName = "PopEngineUnitTestApp"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
