Seem to require packages in DLL to load PopCoreml.dll (but not in host exe)
Former-commit-id: 49169870d238549a64d25707cae48a7b6246cc39

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -508,6 +508,7 @@
     <None Include="..\UnitTest\VideoTest\Yuv8_8_8.frag.glsl" />
     <None Include="..\UnitTest\VideoTest\Yuv8_8_8_MultiImage.frag.glsl" />
     <None Include="..\UnitTest\VirtualReality\bootup.js" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp" />
