--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
@@ -32,7 +32,7 @@
     </ClCompile>
     <Link>
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
-      <DelayLoadDLLs>PopOpenml.dll;PopCameraDevice.dll;PopH264.dll;Openvr.dll;x264.dll;opencv_world410.dll;opencv_world410d.dll;aristo_interface.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>PopOpenml.dll;PopCameraDevice.dll;PopH264.dll;openvr_api.dll;x264.dll;opencv_world410.dll;opencv_world410d.dll;aristo_interface.dll</DelayLoadDLLs>
       <Profile>true</Profile>
       <SubSystem>Windows</SubSystem>
     </Link>
