--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -1052,5 +1052,10 @@
     <Image Include="..\UnitTest\H264Encode\cat.jpeg">
       <Filter>UnitTest\H264Encode</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\src\Libs\PopCoreMl\PopCoreml.manifest">
+      <Filter>Libs\PopCoreMl</Filter>
+    </Manifest>
   </ItemGroup>
 </Project>
