Build dir's changed to aid having multiple projects in one solution
Former-commit-id: b8026261f26908881da483c3f99908bc30b19099

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -787,18 +787,28 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">
     <IncludePath>D:\JavascriptCore\JavaScriptCore;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_Chakra|x64'">
     <IncludePath>D:\JavascriptCore\JavaScriptCore;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">
     <IncludePath>D:\JavascriptCore\JavaScriptCore;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">
     <IncludePath>D:\JavascriptCore\JavaScriptCore;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">
     <IncludePath>D:\JavascriptCore\JavaScriptCore;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Bin\</OutDir>
+    <IntDir>$(SolutionDir)$(ProjectName)_$(Platform)_$(Configuration)\Temp\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">
     <ClCompile>
