Also lazy loading dll was wrong in PopCoreml.props
Former-commit-id: 4901b6b50fe999a7688f464396134e4388e783ab

--- a/src/Libs/PopCoreMl/PopCoreml.props
+++ b/src/Libs/PopCoreMl/PopCoreml.props
@@ -5,7 +5,7 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <Link>
-      <DelayLoadDLLs>PopOpenml.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
+      <DelayLoadDLLs>PopCoreml.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>$(ProjectDir)\..\src\Libs\PopCoreml\PopCoreml.manifest</AdditionalManifestFiles>
