Added Zip (lib) and Pop.Zip.Archive Api for creating zip files
Former-commit-id: bc88cc31c3a06e0f538303e3a77b80e2230e03a1

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "src/MagicEnum"]
 	path = src/MagicEnum
 	url = https://github.com/Neargye/magic_enum.git
+[submodule "src/Zip"]
+	path = src/Zip
+	url = https://github.com/kuba--/zip.git
