--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="..\src\SoyLib\src\GL\wglew.h" />
     <ClInclude Include="..\src\SoyLib\src\HeapArray.hpp" />
     <ClInclude Include="..\src\SoyLib\src\MemHeap.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\miniz\miniz.h" />
     <ClInclude Include="..\src\SoyLib\src\smallsha1\sha1.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyApp.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyArray.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="..\src\TApiSocket.h" />
     <ClInclude Include="..\src\SoyViveHandTracker.h" />
     <ClInclude Include="..\src\TApiWebsocket.h" />
+    <ClInclude Include="..\src\TApiZip.h" />
     <ClInclude Include="..\src\TBind.h" />
     <ClInclude Include="..\src\TPopServerThread.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">true</ExcludedFromBuild>
@@ -246,6 +248,7 @@
     <ClInclude Include="..\src\v8\include\v8-wasm-trap-handler-win.h" />
     <ClInclude Include="..\src\v8\include\v8.h" />
     <ClInclude Include="..\src\v8\include\v8config.h" />
+    <ClInclude Include="..\src\Zip\src\zip.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\ChakraBind.cpp" />
@@ -263,10 +266,12 @@
     <ClCompile Include="..\src\TApiGui.cpp" />
     <ClCompile Include="..\src\TApiOpenvr.cpp" />
     <ClCompile Include="..\src\SoyViveHandTracker.cpp" />
+    <ClCompile Include="..\src\TApiZip.cpp" />
     <ClCompile Include="..\src\V8Bind.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_Chakra|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\src\Zip\src\zip.c" />
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\CFLite.dll">
       <FileType>Document</FileType>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug_JsCore|x64'">true</DeploymentContent>
