Adding kinect stream example
Former-commit-id: 1b84eb500456592964f2cc04c0e7a50c53120f2f

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -494,6 +494,14 @@
     <None Include="..\UnitTest\H264Encode\bootup.js" />
     <None Include="..\UnitTest\H264Encode\Quad.vert.glsl" />
     <None Include="..\UnitTest\HttpServer\bootup.js" />
+    <None Include="..\UnitTest\KinectStream\Blit.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\bootup.js" />
+    <None Include="..\UnitTest\KinectStream\KinectDepth.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\Quad.vert.glsl" />
+    <None Include="..\UnitTest\KinectStream\Uvy844.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\Yuv8888.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\Yuv8_88.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\Yuv8_8_8.frag.glsl" />
     <None Include="..\UnitTest\LeapMotion\bootup.js" />
     <None Include="..\UnitTest\LeapMotion\Cube.frag.glsl" />
     <None Include="..\UnitTest\LeapMotion\Cube.vert.glsl" />
