--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source">
@@ -108,6 +108,9 @@
     </Filter>
     <Filter Include="Libs\Zip">
       <UniqueIdentifier>{8e667f50-59ee-46a1-876c-2b5024d01ff9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UnitTest\KinectStream">
+      <UniqueIdentifier>{825b87c6-0b8a-48dc-a143-59846452df8c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -803,6 +806,30 @@
     </None>
     <None Include="..\src\SoyLib\src\SoyFilesystem.mm">
       <Filter>SoyLib</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\KinectDepth.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Quad.vert.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Uvy844.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Yuv8_88.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Yuv8888.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Blit.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\bootup.js">
+      <Filter>UnitTest\KinectStream</Filter>
+    </None>
+    <None Include="..\UnitTest\KinectStream\Yuv8_8_8.frag.glsl">
+      <Filter>UnitTest\KinectStream</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
