--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -388,9 +388,9 @@
     <None Include="..\src\Libs\PopH264\PopH264.dll.meta" />
     <None Include="..\src\Libs\PopH264\PopH264.pdb" />
     <None Include="..\src\Libs\PopH264\PopH264.pdb.meta" />
-    <CustomBuild Include="..\src\Libs\x264\bin\x64\x264.dll">
+    <CopyFileToFolders Include="..\src\Libs\x264\bin\x64\x264.dll">
       <FileType>Document</FileType>
-    </CustomBuild>
+    </CopyFileToFolders>
     <CustomBuild Include="..\src\Libs\ViveHandTracking\libs\Windows64\aristo_interface.dll">
       <FileType>Document</FileType>
     </CustomBuild>
