Added Json11 submodule
Former-commit-id: c82ef12952b65fc5a2ebf1460b89a4cb6185ff7c

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "src/Zip"]
 	path = src/Zip
 	url = https://github.com/kuba--/zip.git
+[submodule "https://github.com/dropbox/json11.git"]
+	path = https://github.com/dropbox/json11.git
+	url = src/Json11
+[submodule "src/Json11"]
+	path = src/Json11
+	url = https://github.com/dropbox/json11.git
