Renamed in project too
Former-commit-id: c03ab1c6b2f5cb11275a7cd954bf159bbe21f3f7

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -498,7 +498,7 @@
     <None Include="..\UnitTest\HttpServer\bootup.js" />
     <None Include="..\UnitTest\KinectStream\Blit.frag.glsl" />
     <None Include="..\UnitTest\KinectStream\bootup.js" />
-    <None Include="..\UnitTest\KinectStream\KinectDepth.frag.glsl" />
+    <None Include="..\UnitTest\KinectStream\Depthmm.frag.glsl" />
     <None Include="..\UnitTest\KinectStream\Quad.vert.glsl" />
     <None Include="..\UnitTest\KinectStream\Uvy844.frag.glsl" />
     <None Include="..\UnitTest\KinectStream\Yuv8888.frag.glsl" />
