--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -843,6 +843,9 @@
     <None Include="..\UnitTest\KinectStream\Yuv8_8_8_OneImage.frag.glsl">
       <Filter>UnitTest\KinectStream</Filter>
     </None>
+    <None Include="..\UnitTest\PopEngineCommon\PopH264.js">
+      <Filter>UnitTest\PopEngineCommon</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp">
